@@ -1,3 +1,6 @@
+[B]2.1.4[/B]
+Added: correctly populate the artist name into MusicInfoArtist
+
 [B]2.1.3[/B]
 Fixed: fallback from last.fm
 
